--- a/style.css
+++ b/style.css
@@ -1148,10 +1148,6 @@ button {
   margin-right: 10px;
 }
 
-.experience-item-header:nth-child(1) {
-  display: flex;
-  justify-content: space-between;
-}
 
 .experience-item-header span{
   color: #888;
@@ -1212,4 +1208,18 @@ button {
 
 .skills-container::-webkit-scrollbar-track:hover {
   background-color: #e0e0e0;
+}
+.experience-section {
+  display: none;
+}
+.experience-section.active {
+  display: block;
+}
+.pagination-controls {
+  margin-top: 20px;
+  text-align: center;
+}
+.pagination-controls .btn {
+  margin: 0 10px;
+  padding: 5px 10px;
 }
